css/common.css
@font-face {
    font-family: SanstuyBrush;
    src: url("../SanstuyBrush.otf") format("opentype");
}

html, a {
    font-family: sans-serif;
}

body{
    margin: 0;
    background-image: url("../img/watercolor-bg.png");
    background-repeat: no-repeat;
    background-size: 100%; /*streaches image to cover whole screen*/
    background-attachment: fixed;
    height: 0;
}

#logo {
    margin-top: 0px;
    width: 450px;
    position: absolute;
    left: 50%; /*part 1 of centering an absolutely positioned element: pushes it a bit to far left*/
    margin-left: -225px; /*part 2 of centering an absolutely positioned element: pushes it back to the right a bit*/
    z-index: -1;
}

#search-icon{
    padding-top: 40px;
    margin-bottom: -50px; /*pulls the search ison on top of the header*/
    font-size: 40px;
    color: #611b15;
    opacity: 50%;
    position: absolute;
    right: 95px;
}

#search-icon:hover {
    opacity: 100%;
}

.brush {
    font-family: SanstuyBrush;
}

a {
    text-decoration: none; /*remove underline*/
}

ul li {
    list-style-type: none; /*remove bullets from lists*/
}

#top-container {
    width: 1400px; 
    left: 50%;
    margin-left: -700px;
    position: absolute;
    z-index: 0;
    background-image: url("../img/pines.png");
    background-repeat: no-repeat;
    background-size: 100%;
    height: 600px;
}

#main-container {
    width: 1400px; 
    height: 100%;
    left: 50%;
    margin-left: -700px;
    position: absolute;
    z-index: -1;
    margin-top: 400px;
    /* background: lightgray; */

}

#content {
    /* position: absolute; */
    margin-top: 101px;
}

/***********START NAV************/

#menu-toggle input { /* hides the checkbox of the hamburger menu*/
    visibility: hidden;
}

#hamburger-icon {
    visibility: hidden; 
}

.current { /*highlight the current page of the nav*/
    color: #396509;
    /* font-weight: bold; */
}

ul {
    /* display: inline; */
    padding: 0;
}

#nav-right ul{
    float: right;
    margin-right: 60px;
}

#nav-left ul{
    float: left;
    margin-left: 60px;
}

nav li {
    display: inline-block;
    padding: 35px;
    font-size: 25px;
    margin-top: 220px; /* pushes the text into the middle of the logo area*/  
}

/* CHANGE THE LINE BELOW IF NAV CONTENT CHANGES This line is because nav-left has more 
characters than nav-right, making it unbalanced. this reduces the padding between each nav link, 
making both side equal length in px and looking more balanced  */
#nav-left li {
    padding-left: 10px; 
}

nav a {
    color: #611b15;
    /* transition: 0.6s */
}

nav a:hover{
    color:396509;
}

nav {
    z-index: 2;
}

/***********END NAV************/


/************START REGULAR POSTS***********/

.posts p {
    padding-top: 30px;
}

.posts li {
    text-align: center;
    width: 33%;
    display: inline-block;
    /* margin: -2px; */
} 

.posts a {
    color: #611b15;
}

.posts .brush {
    font-size: 18px;
} 

.post-textbox{
    background-color: RGBA(255,255,255,0.7);
    height: 150px;
    padding: 0;
    margin: -166px 0 0 0; /*pulls the text box up to partially cover the image*/
    position: relative; /*puts the textbox infront of the image, similar to using z index*/
}

.post-textbox .brush{
    padding: 0 20px 0 20px;
}

/* .posts {
    -webkit-column-count: 3;
    -webkit-column-gap:   0px;
    -moz-column-count:    3;
    -moz-column-gap:      0px;
    column-count:         3;
    column-gap:           0px;  
} */



.posts img {
    width: 100% !important;
    /* height: auto !important; */
    object-fit: none;
    height: 400px;
    opacity: 60%;
    transition: 0.6s;
}

.posts img:hover {
    opacity: 100%;
}

.posts{
    display:inline;
    margin-right: auto;
    margin-left: auto;
    /* margin-left: 2.2px; */
}

/*******END regular posts*******/

/************START latest post************/

  #latest img {
    width: 100%;
    height: 350px;
    object-fit: none;
    opacity: 50%;   
    /* transition: 0.6s; */
    margin-top: 20px;
}

.latest-textbox {
    margin-top: -280px; /*vertially centers the latest article's text box*/
    margin-bottom: 73px; /* creates the sopace between the bottom of the text box and the top of the regular articles*/
    height: 200px;
    text-align: center;
    padding-top: 10px;    
}

.latest-textbox a {
    color: #611b15;
    padding: 0 20px 0 20px;
}

.latest-textbox p {
    margin-top: 45px;
    margin-bottom: -7px;
    color: #611b15;
}

#latest .brush {
    font-size: 50px;
}

  /************END latest post************/

  /****************** START category pages ********************/

#category-title{
    font-family: SanstuyBrush;
    text-align: center;
    font-size: 40px;
    color: #611b15;
    font-weight: normal;
}

  /****************** END category pages ********************/

  /****************** START Search page ********************/

#non-post-page {
    width: 1400px;
    background-color: rgba(255,255,255,.5);
    min-height: 100%;
}

#non-post-page p {
    padding: 20px;
}

#search-container {
    width: 600px;
    margin: 0;
    margin-right: auto;
    margin-left: auto;
}

#results-container li{
    margin-top: 10px;
    padding: 20px;
    background-color: rgba(255,255,255,.6);
    box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.2);
}

#results-container a{
    color: #611b15;
    text-decoration: underline;
}

#search-input{
    width: 100%;
    height: 40px;
    font-size: 35px;
}
 
/****************** END Search page ********************/

  /****************** START footer ********************/

footer{
    height: 230px;
    /* background-color: gray; */
    background-image: url("../img/pines-footer.png");
    background-repeat: no-repeat;
    background-size: 100%;  
    width: 100%;
    margin-top: -15px;
    text-align: center;
    font-size: 40px;
}

footer a {
    color: #396509;
    margin: 100px 20px 40px 20;
    opacity: 50%;
    /* transition: 0.6s; */
}

footer a:hover {
    opacity: 100%
}

  /****************** END footer ********************/

/****************** START responsive  ********************/

@media (max-width: 1400px) {

    #non-post-page {
        width: 100%;
    }

    body {
        background-size: 1400px;
    }

    #nav-left li, #nav-right li {
        font-size: 21px;
        padding: 19px;
        margin-top: 80px;
    }

    #nav-left li {
        padding-left: 0px; 
    }

    #logo{
        width: 20%;
        margin-left: -10%;
    }

    #main-container, #top-container{
        width: 100%;
        min-width: 320px;
        margin-left: -50%;
    }

    #top-container{
        height: 300px;
    }

    #main-container {
        margin-top: 200px;
    }

    .latest-textbox p {
        margin-top: 15px;
    }

    footer a {
        margin-top: 50px;
    }

    footer {
        height: auto;
    }
}

@media (max-width: 1200px) {
    
    #top-container{
        height: 250px;
    }

    #main-container {
        margin-top: 150px;
    }
}

@media (max-width: 950px) {

    /* .posts {
        -webkit-column-count: 2;
        -webkit-column-gap:   0px;
        -moz-column-count:    2;
        -moz-column-gap:      0px;
        column-count:         2;
        column-gap:           0px;  
    } */

    .posts li {
        width: 49.5%;

    } 


    #nav-left li, #nav-right li {
        font-size: 16px;
    }

    #nav-right li {
        padding-left: 20px; 
    }


    #nav-left li {
        padding-left: 0px; 
    }

    #top-container{
        height: 195px;
        z-index: 2;
    }

    #main-container {
        margin-top: 93px; /*line is covering header links*/
        z-index: 1;
    }
}

@media (max-width: 800px) {

    .posts li {
        width: 100%;
    } 

    .post-textbox {
        margin-top: -162px;
    }

    #nav-right{
        margin-left: 60px;
    }

    #nav-right ul{
        margin-right: 0px;
    }

    nav {
        display: none;
        margin-top: 0px;
        margin-left: -40px;
        box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.5);
    }

    nav ul {
        margin: 0;
    }

    nav li {
        display: block;
        box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.5);
    }

    nav a {
        padding: 10px 50px 0 30px;;
        font-size: 35px;
    }
    
     #hamburger:checked ~ nav{
         display: block;
    }    
    
    #hamburger:checked ~ nav{
        z-index: 2
    }

     #hamburger-icon {
        visibility: visible; 
        color: #611b15;
        font-size: 40px;
        margin-left: 15px;
    }

    #category-title{
        padding-top: 10px;  
        margin-bottom: -5px;
    }

    #nav-right ul{
        float: left;
    }

    #nav-right ul, #nav-left ul {
        float: none;
    }

    #nav-right li, #nav-left li {
        background: rgba(255,255,255,.9);
        margin: 0;
        padding-left: 0px
    }

    #logo {
        width: 156px;
        margin-left: -78px /*centers the logo*/
    }

    #main-container, #top-container{
        background-size: 783px;
    }

    #latest {
        display: none;
    }

    #search-icon{
        right: 15px;
        padding-top: 10px;
    }

    .posts {
        font-size: 12px;
    }

    .posts .brush{
        font-size: 14px;
    }

    body {
        background-size: 1000px;
    }

    footer{
        background-size: 783px;
    }

    footer a {
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .posts img {
        height: 300px;
    }

    .posts {
        -webkit-column-count: 1;
        -webkit-column-gap:   0px;
        -moz-column-count:    1;
        -moz-column-gap:      0px;
        column-count:         1;
        column-gap:           0px;  
        font-size: 15px;
    }
}


/****************** END responsive  ********************/

